Fixing tt white-space property to pre-wrap
Changing tt to white-space: pre-wrap so it wraps properly

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,11 @@
 	padding: 0.2em 0;
 }
 
+pre {
+	white-space: pre;
+	font-family: var(--mono-font);
+}
+
 .code {
 	font-family: "PT Mono", "Andale Mono", "Courier New", Courier, monospace;
 	font-family: var(--mono-font);
@@ -44,12 +49,11 @@
 }
 
 .code pre {
-	white-space: pre;
+	white-space: pre-wrap;
 }
 
-pre, tt {
-	font-family: var(--mono-font);
-	white-space: pre;
+tt {
+	white-space: pre-wrap;
 }
 
 pre *, tt * {
